<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".CreditActivity">

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/headerb"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head"
        android:text="@string/tuser"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/tinf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tus"
        android:text="@string/desc"
        android:textSize="18sp"
        android:paddingTop="10dp"/>

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tinf"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/email"
        android:layout_gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>